<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱购</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登 录</string>
    <string name="home">主页</string>
    <string name="more">更多</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="title_activity_amain">AMainActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_good_detail">GoodDetailActivity</string>
    <!-- goods info -->

    <string name="price">价格</string>
    <string name="weight">重量</string>
    <string name="producer">产商</string>
    <string name="color">颜色</string>
    <string name="goods_title">iPhone 4S 电信版</string>
    <string name="goods_desc">Apple/苹果 iPhone 4S(有锁) 16G 32G 64G,购买立减200</string>

</resources>