<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    android:orientation="vertical" >

    <com.xiter.igou.widget.TopBar
        android:id="@+id/topbar_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </com.xiter.igou.widget.TopBar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar_login"
        android:layout_marginTop="@dimen/page_login_top_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_paading"
        android:paddingRight="@dimen/page_paading" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#666666"
            android:textSize="@dimen/field_tip_font_size" />

        <EditText
            android:id="@+id/etxt_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editview_bg"
            android:hint="@string/input_username"
            android:paddingLeft="@dimen/input_paading"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_line_margin"
            android:text="@string/password"
            android:textColor="#666666"
            android:textSize="@dimen/field_tip_font_size" />

        <EditText
            android:id="@+id/etxt_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editview_bg"
            android:hint="@string/input_password"
            android:paddingLeft="@dimen/input_paading"
            android:password="true"
            android:singleLine="true" />
    </LinearLayout>

</RelativeLayout>